<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auaf_darkblue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="UsingOnClickInXml"
    tools:context=".MainDashboard">


    <LinearLayout
        android:id="@+id/headerSection"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/rounded_header"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/auaf" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headerSection"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">


        <LinearLayout
            android:id="@+id/CardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/photoGalleryBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="photoGalleryOnclick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/ic_image_gallery"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Photo Gallery"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="videoGalleryOnClick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/ic_video_gallery"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_gallery"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/CardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CardView1"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="degreePlanOnClick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/degreeplans"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/degree_plans"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="staffOnClick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/ic_staff"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staffClassModel"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/CardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="findUsOnClick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/ic_public"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/find_on_socials"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/CardView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CardView3"
            android:orientation="horizontal">


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/grey_5"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="logoutOnClick"
                        android:orientation="vertical"
                        android:padding="@dimen/spacing_large">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/spacing_smlarge"
                            android:layout_marginBottom="@dimen/spacing_smlarge"
                            app:srcCompat="@drawable/ic_logout"
                            app:tint="@color/indigo_500" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/logout"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/grey_90" />

                    </LinearLayout>

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
